[MODINVOICE-590]. Replace net.mguenther.kafka:kafka-junit (EOL) (#540)
* [MODINVOICE-590]. Replace net.mguenther.kafka:kafka-junit (EOL)

* [MODINVOICE-590]. Refactor producer method, remove assert

* [MODINVOICE-590]. Use a sync kafka producer

* MODINVOICE-590. Add retries for observe values from kafka topic

* MODINVOICE-590. Improve stability for postgres container

* MODINVOICE-590. Add logic to disconnect from ftp client for all cases

* MODINVOICE-590. Add logs to see why post tenant call failed

* MODINVOICE-590. Fix string format issue

* MODINVOICE-590. Simplify post tenant call to make it more stable

* MODINVOICE-590. Remove ready message times and increase testcontainer version

* MODINVOICE-590. Use the same approach with PosgresTester as in stable mod-orders

* MODINVOICE-590. Use compose and Future for deployment

* MODINVOICE-590. Fix sonar complains

---------

Co-authored-by: Serhii Nosko <Serhii_Nosko@epam.com>
Co-authored-by: Julian Ladisch <julianladisch@users.noreply.github.com>